[workspace]
members = [ "examples/test_pcl_rs"]

[package]
name = "pcl_rs"
version = "0.1.3"
edition = "2021"
description = "A pure rust PCL tool that includes functions such as reading PCD files and displaying point clouds, which can be used in conjunction with ros_pointcloud2"
license = "MIT"
keywords = ["PCL", "PointCloud","ros"]
readme = "README.md"
repository = "https://github.com/1879615351/pcl_rs"

[dependencies]
ros_pointcloud2 = "0.4.0"
ros-nalgebra = "0.1.0"
k_nearest = "0.2.0"
kiss3d = "0.35.0"
